# graceful-wm-i3

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  GENERATED_command_call.h  GENERATED_command_enums.h  GENERATED_command_tokens.h  GENERATED_config_call.h  GENERATED_config_enums.h  GENERATED_config_tokens.h  config.h  config_parser.c  config_parser.h  data.h  dpi.c  ipc.c  ipc.h  main.c  safewrappers.c
common/: common.cmake  log.c
wm/: CMakeLists.txt  atoms-NET-SUPPORTED-xmacro.h  atoms-rest.xmacro.h  bindings.c  bindings.h  command-line.c  command-line.h  con.c  con.h  config.c  config.h  data.c  data.h  draw-utils.c  draw-utils.h  ewmh.c  ewmh.h  get-mod-mask.c  get-mod-mask.h  handlers.c  handlers.h  main.c  match.c  match.h  queue.c  queue.h  restore-layout.c  restore-layout.h  sd-daemon.c  sd-daemon.h  tree.c  tree.h  types.h  utils.c  utils.h  x.c  x.h  xcursor.c  xcursor.h  xkb.c  (+1 more)
